Return a run-time error if npth_rwlock_timedrdlock is not supported.

* src/npth.c (npth_rwlock_timedrdlock): Return ENOSYS if not
supported.
(npth_rwlock_timedwrlock): Use HAVE_PTHREAD_RWLOCK_TRYWRLOCK.

--

GnuPG-bug-id: 7109
Fixed-commit: 363c370bd35dd0bb4e5636b2d4f06ea88c658794
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>